# opnsense-config-generator

./: .gitignore  AI.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  config.yaml.j2  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check-opnsense-release.yml  ci.yml  docker-publish.yml
docs/: full_config.yaml.j2  minimal_config.yaml.j2
opnsense_config_generator/: __main__.py  build.py  cli.py  password.py  render.py  revision.py  uuid_utils.py  version.py  xml_utils.py
opnsense_config_generator/builders/: acme_client.py  aliases.py  base.py  bind.py  bridges.py  certs.py  chrony.py  cron.py  dnsmasq.py  filter.py  gateways.py  git_backup.py  interfaces.py  ipsec.py  kea.py  laggs.py  monit.py  nat.py  ntpd.py  openvpn.py  qemu_guest_agent.py  radvd.py  routes.py  syslog.py  system.py  trafficshaper.py  unbound.py  vlans.py  wireguard.py
opnsense_config_generator/models/: acme_client.py  aliases.py  bind.py  bridges.py  certs.py  chrony.py  cron.py  dnsmasq.py  filter.py  gateways.py  git_backup.py  interfaces.py  ipsec.py  kea.py  laggs.py  monit.py  nat.py  ntpd.py  openvpn.py  qemu_guest_agent.py  radvd.py  root.py  routes.py  syslog.py  system.py  trafficshaper.py  unbound.py  vlans.py  wireguard.py
opnsense_reference/: README.md
scripts/: check_new_opnsense_release.py  sync_opnsense_reference.py
tests/: conftest.py  test_golden.py  test_snapshots.py  test_xml_wellformed.py
tests/golden/full/: config.yaml  expected.xml
tests/unit/: test_models_validation.py  test_password.py  test_render.py  test_revision.py  test_uuid.py
(+64 files in other folders)
