[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opnsense-config-generator"
version = "0.0.3"
description = "Generate OPNsense config.xml from a documented Jinja2 template"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "lxml>=5.0",
    "bcrypt>=4.0",
]

[project.scripts]
opnsense-config-generator = "opnsense_config_generator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opnsense_config_generator*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
